ignore idea file

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
-target/*
+target/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionBackup
 pom.xml.next
 release.properties
+
+# idea
+.idea/
+*.ipr
+*.iws
+*.iml
+out/
+
